# T_OpenCV_ProjImg

./: CMakeLists.txt  README.md  T_OpenCV_ProjImg.cpp  T_OpenCV_ProjImg.sln  T_OpenCV_ProjImg.vcxproj  T_OpenCV_ProjImg.vcxproj.filters
buildProj/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  T_OpenCV_ProjImg.sln  T_OpenCV_ProjImg.vcxproj  T_OpenCV_ProjImg.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
buildProj/T_OpenCV_ProjImg.dir/Debug/: T_OpenCV_ProjImg.exe.recipe  T_OpenCV_ProjImg.ilk
buildProj/T_OpenCV_ProjImg.dir/Debug/T_OpenCV_ProjImg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
buildProj/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
buildProj/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
buildProj/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
buildProj/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
